# DynamicPricing

./: Dockerfile  Dockerfile.tools  README.md  docker-compose.yml  pyproject.toml
application/config/: __init__.py  bootstrap.py
application/dataset/: __init__.py  config.py  dwh_export.py  sampling.py
application/dataset/io/: __init__.py  loader.py  splitter.py
application/dataset/processing/: __init__.py  cleaning.py  features.py  selection.py
application/networks/: __init__.py  ner.py
application/preprocessing/: __init__.py  schema.py  transformers.py
application/utils/: misc.py
bot/: middlewares.py  pipelines.py  proxy_middlewares.py  requirements.txt  settings.py
bot/spiders/: category_spider.py  restaurant_spider.py
core/: __init__.py  settings.py
extras/data/: cost_of_living_index.csv
infrastructure/azure/apim/: apim-policy.xml
infrastructure/azure/endpoints/: endpoint.yml
infrastructure/azure/endpoints/blue/: deployment-blue.yml
infrastructure/azure/endpoints/blue/tests/smoke/: run.sh
infrastructure/azure/endpoints/green/: deployment-green.yml
infrastructure/azure/endpoints/green/samples/: serving_input_example.json
infrastructure/azure/endpoints/green/tests/smoke/: run.sh
infrastructure/azure/scale/: autoscale.json
infrastructure/db/: mongo.py
infrastructure/docker/mlflow-models/menu-price/: Dockerfile  README.md
model/: __init__.py  evaluation.py  train.py  tune.py
model/registry/: __init__.py  spaces.py  specs.py
notebooks/: uber-eats-EDA.ipynb  uber-eats-ML.ipynb  uber-eats-deep-learning.ipynb
pipelines/: __init__.py  autotune.py  dwh_export_pipeline.py
scripts/deploy/: deploy_endpoint_blue.sh  deploy_endpoint_green.sh
scripts/endpoint/: delete_deployment.sh  delete_endpoint.sh  show_endpoint_uri.sh
scripts/infra/: create_app_insights.sh  delete_resource_group.sh
scripts/scale/: apply_autoscale_blue.sh  apply_autoscale_green.sh
scripts/traffic/: promote_green.sh  rollback_blue.sh  rollout_green_canary.sh  set_traffic.sh  show_traffic.sh  status.sh
services/api/: Dockerfile  gunicorn.conf.py  pyproject.toml
services/api/app/: main.py
services/api/app/api/v1/: router.py  score.py
services/api/app/config/: __init__.py  logging.py  settings.py
services/api/app/domain/: __init__.py  inference.py  schemas.py
services/api/scripts/: generate_schema.py
services/api/tests/payloads/: payload.json
services/api/tests/unit/: test_score.py
services/common/: export_state_metadata.py
services/ui/: app.py
tests/cli/: conftest.py  test_cli_run.py  test_cli_serve.py
tests/payloads/: call-inference-local.json
tests/unit/: conftest.py  test_cleaning.py  test_config_bootstrap.py  test_dwh_export.py  test_features.py  test_loader.py  test_mongo.py  test_networks_base.py  test_networks_ner.py  test_pipelines_autotune.py  test_pipelines_dwh_export.py  test_preprocessing_schema.py  test_preprocessing_transformers.py  test_sampling.py  test_selection.py  test_splitter.py  test_utils_misc.py
tools/: run.py  serve.py
